--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,7 @@ gradle-app.setting
 
 # Eclipse Gradle plugin generated files
 # Eclipse Core
-.project
+.projectgit
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
